@@ -1,6 +1,8 @@
 Version 1.8.7
 - BUG: Issue #633: Relocate dialog does
        not remember urls. (Stefan)
+- BUG: Issue #634: Repo browser does not
+       show nested externals. (Stefan)
 
 Version 1.8.6
 - BUG: Issue #617: Checkbox size too big on Aero
